# dcentb/src/main/java/com/zuunr/dcentb/rest/controller/RequestHandlerProvider.java
@@ -2,6 +2,7 @@ package com.zuunr.dcentb.rest.controller;
 
 import com.zuunr.dcentb.rest.Request;
 import com.zuunr.dcentb.rest.processor.Processor;
+import com.zuunr.dcentb.rest.processor.accesscontrol.ApiKeyProvisioner;
 import com.zuunr.dcentb.rest.requesthandler.basic.MethodNotAllowedRequestHandler;
 import com.zuunr.dcentb.rest.requesthandler.basic.NotFoundRequestHandler;
 import com.zuunr.json.JsonArray;
@@ -44,6 +45,7 @@ public class RequestHandlerProvider {
 
     public RequestHandlerProvider(JsonObject openApiDocument, JsonObject mongoDbConfig) {
         openApiDocument = applyMongodbConfig(openApiDocument, mongoDbConfig);
+        new ApiKeyProvisioner().provision(openApiDocument);
         pathConfigMapper = setupPathConfigMapper(openApiDocument);
     }
 
